Resized too large images. Fixed bug in side-content width when in drops under main.

--- a/style/style.css
+++ b/style/style.css
@@ -482,7 +482,7 @@ img {
     }
 
     /*Read without getting neck problems*/
-    .main-content {
+    .main-content, .side-content {
         max-width: 40em;
     }
 
